--- a/calc/index.html
+++ b/calc/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>mGunawardhana's BMI Calc</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="styles/style.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
@@ -41,6 +41,6 @@
     </div>
 </div>
 <script src="assets/js/jquery/jquery-3.6.1.min.js"></script>
-<script src="script.js"></script>
+<script src="script/script.js"></script>
 </body>
 </html>
